XRDDEV-2198 refactor PossibleAction enum and also remove some cross dependecies